objects/Demo_Obj__c.object
<CustomObject>
    <label>Demo Obj</label>
    <nameField>
        <label>Demo Obj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Objs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <validationRules>
        <fullName>Phone_Not_null</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Phone__c)</errorConditionFormula>
        <errorMessage>Please Check Phone Field</errorMessage>
    </validationRules>
</CustomObject>